# red

./: .coverage  .gitignore  Dockerfile.kali  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  repro.py  requirements.txt  smart_cov.py  start.sh
.github/workflows/: ci.yml  test.yml
_bmad-output/: code-review-findings.md
_bmad-output/analysis/: brainstorming-session-2025-12-31.md
_bmad-output/implementation-artifacts/: 0-1-pytest-core-configuration.md  0-2-test-directory-structure-and-fixtures.md  0-3-testcontainers-kali-integration.md  0-4-coverage-gates-configuration.md  0-5-github-actions-ci-pipeline.md  0-6-cyber-range-test-environment.md  0-7-safety-and-emergence-test-framework.md  1-1-exception-hierarchy.md  1-10-kill-switch-resilience-testing.md  1-2-core-data-models.md  1-3-yaml-configuration-loader.md  1-4-protocol-abstractions-abcs.md  1-5-ntp-time-synchronization.md  1-6-keystore-pbkdf2-key-derivation.md  1-7-ca-key-storage.md  1-8-scope-validator-hard-gate.md  1-9-kill-switch-core-tri-path.md  2-1-cli-entry-point-and-command-structure.md  2-10-systemd-integration.md  2-11-daemon-graceful-shutdown.md  2-12-engagement-database-schema.md  2-13-configuration-hot-reload.md  2-2-ipc-protocol-definition.md  2-3-unix-socket-server.md  2-4-engagement-state-machine.md  2-5-session-manager-multi-engagement.md  2-6-engagement-start-and-pre-flight-checks.md  2-7-pause-and-resume-hot-state.md  2-8-stop-and-checkpoint-cold-state.md  2-9-attach-and-detach-tui-client.md  3-1-redis-sentinel-client.md  3-10-llm-gateway-singleton.md  3-11-llm-provider-timeout-and-retry.md  3-2-redis-reconnection-logic.md  3-3-event-bus-pubsub.md  3-4-event-bus-streams-for-audit.md  3-5-llm-provider-protocol.md  3-6-nvidia-nim-provider.md  3-7-llm-rate-limiter.md  3-8-llm-model-router.md  (+66 more)
_bmad-output/planning-artifacts/: architecture.md  epics-stories.md  prd.md
config/: models.yaml  roe.yaml
cyber-range/: README.md  docker-compose.yml  emergence-baseline.json  expected-findings.json
docs/: USER_GUIDE.md  bmm-workflow-status.yaml  framework_analysis.md
docs/1-analysis/: product-brief.md
docs/2-plan/: prd.md  ux-design.md
docs/3-solutioning/: epics-stories-sprint4.md  epics-stories.md  readiness-report.md  test-design-system.md
docs/best-practices/: async-patterns.md  kali-containers.md
docs/research/: dragon-stack.md  research-findings.md  scalable-mcp-tooling-research.md  v2-migration-research.md
docs/sprint-artifacts/: sprint-status.yaml
fixtures/tool_outputs/: ffuf_results.json  hydra_results.txt  nikto_results.txt
research/: msf_wrapper.py  nim_throttle_poc.py
scripts/: categorize_tools.py  generate_manifest.sh  manual_test_epic1.py  manual_test_epic2.py
src/: main.py
src/agents/: ghost_agent.py
src/core/: council.py  event_bus.py  kill_chain.py  orchestrator.py  persistence.py  reporting.py  roe_loader.py  throttler.py  tool_orchestrator.py  war_room.py  worker_pool.py
src/cyberred/: __init__.py  cli.py  main.py  py.typed
src/cyberred.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp/: __init__.py  base_adapter.py  ffuf_adapter.py  generic_adapter.py  hydra_adapter.py  nikto_adapter.py  (+4 more)
tests/: conftest.py  debug_full_flow.py  debug_network.py  integration_check.py  test_brain_live.py  test_dragon_flow.py  test_event_bus.py  test_nlp.py  test_range.py  test_safety.py
tools/: manifest.yaml  manifest_custom.yaml
(+349 files in other folders)
