[project]
name = "cyberred"
version = "2.0.0-alpha"
description = "Autonomous penetration testing platform with stigmergic swarm intelligence"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
authors = [
    { name = "Cyber-Red Team" }
]
keywords = ["security", "penetration-testing", "ai", "swarm-intelligence"]

dependencies = [
    "textual>=0.40.0",
    "redis>=5.0.0",
    "pymetasploit3>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "structlog>=24.1.0",
    "swarms>=8.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "ntplib>=0.4.0",
    "cryptography>=42.0.0",
    "docker>=7.0.0",
    "typer[all]>=0.9.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "watchdog>=4.0.0",
    # Epic 5: Intelligence Layer dependencies
    "nvdlib>=0.7.0",
    "msgpack>=1.0.0",
]

[project.scripts]
cyber-red = "cyberred.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "respx>=0.21.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=4.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    # Coverage options - enforces 100% coverage gate (NFR19/NFR20)
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=xml:coverage.xml",
    # Note: --cov-fail-under=100 moved to explicit CI command or report config
    # to allow partial test runs (e.g. unit tests only) without failing immediately
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (require external services)",
    "safety: Safety-critical tests (scope, kill switch, auth)",
    "emergence: Emergence validation tests (stigmergic metrics)",
    "e2e: End-to-end tests (full engagement flows)",
    "chaos: Chaos engineering tests (resilience)",
    "load: Load and stress tests (scale validation)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
# Coverage threshold: 100% coverage is a HARD GATE per NFR19/NFR20
# No code ships without complete test coverage
fail_under = 100
precision = 2
skip_covered = false  # Show all files for visibility
skip_empty = true     # Skip empty __init__.py files
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
